--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(BETS.std_resid)
 export(BETS.t_test)
 export(BETS.ur_test)
 import(RCurl)
+import(RMySQL)
 import(dygraphs)
 import(forecast)
 import(ggplot2)
@@ -44,7 +45,6 @@ importFrom(graphics,points)
 importFrom(graphics,text)
 importFrom(mFilter,hpfilter)
 importFrom(plotly,plotly_build)
-importFrom(rappdirs,site_config_dir)
 importFrom(rootSolve,multiroot)
 importFrom(seasonal,seas)
 importFrom(stats,as.ts)
