--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(BETS.search)
 export(BETS.std_resid)
 export(BETS.t_test)
 export(BETS.ur_test)
+import(DBI)
 import(RCurl)
 import(RMySQL)
 import(dygraphs)
@@ -63,7 +64,6 @@ importFrom(stats,uniroot)
 importFrom(stats,window)
 importFrom(stringr,str_c)
 importFrom(stringr,str_split)
-importFrom(utils,View)
 importFrom(utils,combn)
 importFrom(utils,head)
 importFrom(utils,read.csv2)
