Fixing the 'get.series.bacen' function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,13 +21,16 @@ export(BETS.std_resid)
 export(BETS.t_test)
 export(BETS.ur_test)
 import(DBI)
+import(DT)
 import(RCurl)
 import(RMySQL)
 import(dygraphs)
 import(forecast)
 import(ggplot2)
 import(grnn)
+import(miniUI)
 import(rmarkdown)
+import(rstudioapi)
 import(sqldf)
 import(urca)
 importFrom(foreign,write.dta)
