--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,6 @@ export(BETS.std_resid)
 export(BETS.t_test)
 export(BETS.ur_test)
 import(DBI)
-import(DT)
 import(RCurl)
 import(RMySQL)
 import(dygraphs)
@@ -31,6 +30,7 @@ import(grnn)
 import(miniUI)
 import(rmarkdown)
 import(rstudioapi)
+import(shiny)
 import(sqldf)
 import(urca)
 importFrom(foreign,write.dta)
